# radio-notifier

./: .dockerignore  Dockerfile  README.md  config.example.toml  pyproject.toml
.github/workflows/: docker.yml
docs/: DEPLOY.md
src/radio_notifier/: __main__.py  cli.py  config.py  discord.py  filters.py  selector.py  shows.py  state.py
src/radio_notifier/feeds/: __init__.py  static.py  youtube.py
systemd/: radio-notifier.docker.service  radio-notifier.docker.timer  radio-notifier.service  radio-notifier.timer
tests/: test_config.py  test_discord.py  test_selector.py  test_state.py  test_static_feed.py  test_youtube_feed.py
tests/fixtures/: youtube_sample.xml
