[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radio-notifier"
version = "0.1.0"
description = "Weekday lunch-break Discord notifier for a fixed lineup of voice actor / law radio shows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nekono Nana KAKKO KARI", email = "shiraude.angrily202@passmail.net" },
]
keywords = ["rss", "discord", "webhook", "radio", "youtube"]
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
radio-notifier = "radio_notifier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/radio_notifier"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
